--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       the HTML file. However, it could be out of it as well, as a separated file.
     -->
     <style>
-      /* The rule below will apply to any image object within our html document. */
+      /* The rule below will apply to any image object within our html document if no other rule is specified. */
       img {
         width: 150px;
         border-radius: 75px;
@@ -64,6 +64,12 @@
       }
 
       img.github_link {
+        width: 40px;
+        border-radius: 75px;
+        float: left;
+        margin-right: 10px;
+      }
+      img.mail_symbol {
         width: 40px;
         border-radius: 75px;
         float: left;
@@ -108,6 +114,10 @@
         src="images/github_symbol.png"
         alt="Access to my GitHub public repos."
       />
+    </a>
+    <!-- Anchors might as well lead the client to perform actions, such as sending an email. -->
+    <a href="mailto:sampleemail@domain.com">
+      <img class="mail_symbol" src="images/mail-symbol.png" alt="Mail symbol">
     </a>
   </body>
 </html>
