Added a comment about how to embed images

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       img is short for image.
       Notice that images cannot have any child object, so it should be a self closing tag. Different from XML, closing tags needn't a trailing slash in HTML
       src stands for the element that's meant to be displayed, while alt stands for alternative information.
+      Sources can also be external (e.g., a link to the target image). However, local images are goig to be used by now for the sake of simplicity.
     -->
     <img
       src="images/F1image.jpg"
