Replaced the "F1 on the beach" image by a lighter one while some issues on the HTTP server projects are being solved.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       Sources can also be external (e.g., a link to the target image). However, local images are goig to be used by now for the sake of simplicity.
     -->
     <img
-      src="images/F1image.jpg"
+      src="images/F1image.jpeg"
       alt="An image of a formula 1 laying on the beach."
     />
     <!-- p is short for paragraph -->
