Sligthly modified images/F1image.jpeg alternative description so that it matches the new picture.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     -->
     <img
       src="images/F1image.jpeg"
-      alt="An image of a formula 1 laying on the beach."
+      alt="Just two F1 legends challenging each other."
     />
     <!-- p is short for paragraph -->
     <!--
